# clusterpulse

./: .gitignore  .golangci.yml  Dockerfile.api  Dockerfile.cluster-controller  Dockerfile.collector  Dockerfile.policy-controller  Makefile  README.md  buf.gen.yaml  go.mod  go.sum  mkdocs.yaml  renovate.json  versions.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linting.yml  pr-labels.yml  release.yml
0.2.1/: 404.html  index.html
0.2.1/contributing/: index.html
0.2.1/getting-started/: index.html
0.2.1/how-to/: index.html
0.2.1/references/: index.html
0.2.1/search/: search_index.json
0.2.1/tutorials/: index.html
0.2.3/: 404.html  index.html
0.2.3/contributing/: index.html
0.2.3/getting-started/: index.html
0.2.3/how-to/: index.html
0.2.3/references/: index.html
0.2.3/search/: search_index.json
0.2.3/tutorials/: index.html
0.3.0/: 404.html  index.html
0.3.0/contributing/: index.html
0.3.0/getting-started/: index.html
0.3.0/how-to/: index.html
0.3.0/references/: index.html
0.3.0/search/: search_index.json
0.3.0/tutorials/: index.html
api/: README.md  main.py  pyproject.toml  pytest.ini  requirements-test.txt  testfile.txt
api/api/dependencies/: auth.py
api/api/middleware/: auth.py  logging.py
api/api/routes/: __init__.py  auth.py  cluster_metrics.py  clusters.py  health.py  public.py  registries.py
api/clusterpulse/: README.md  __init__.py  main.py  requirements.txt
api/clusterpulse/api/dependencies/: auth.py  rbac.py
api/clusterpulse/api/middleware/: auth.py  logging.py
api/clusterpulse/api/responses/: __init__.py  cluster.py  custom_resource.py  metricsource.py  registry.py
api/clusterpulse/api/routes/: auth.py  cluster_metrics.py  clusters.py  health.py  public.py  registries.py
api/clusterpulse/api/utils/: aggregations.py  pagination.py
api/clusterpulse/api/v1/: router.py
api/clusterpulse/api/v1/endpoints/: __init__.py  auth.py  clusters.py  custom_resources.py  health.py  public.py  registries.py
api/clusterpulse/config/: __init__.py  settings.py
api/clusterpulse/core/: __init__.py  logging.py  redis_client.py
api/clusterpulse/db/: __init__.py  redis.py
api/clusterpulse/models/: cluster.py
api/clusterpulse/repositories/: __init__.py  cluster.py  custom_resource.py  redis_base.py
api/clusterpulse/services/: __init__.py  metrics.py  rbac.py
api/core/: config.py  logging.py  rbac_engine.py
api/models/: auth.py
api/repositories/: __init__.py  cluster.py
api/tests/: conftest.py
api/tests/integration/api/: test_auth_routes.py  test_cluster_routes.py  test_custom_resources_routes.py
api/tests/unit/core/: test_rbac_custom_resources.py  test_rbac_engine.py
api/tests/unit/middleware/: test_auth_middleware.py  test_logging_middleware.py
api/tests/unit/repositories/: test_cluster_repository.py  test_metric_source_repository.py
api/tests/unit/responses/: test_metricsource_builders.py
api/tests/unit/utils/: test_aggregations.py  test_pagination.py
api/v1alpha1/: clusterconnection_types.go  groupversion_info.go  metricsource_types.go  monitoraccesspolicy_types.go  registryconnection_types.go  zz_generated.deepcopy.go
cluster-controller/: README.md  go.mod  go.sum
cmd/api/: main.go
cmd/collector/: main.go
cmd/manager/: main.go
docs/: index.md
docs/api/: contributing.md
docs/cluster-controller/: contributing.md
docs/concepts/: .pages  architecture.md  policy-evaluation.md  rbac-model.md
docs/contributing/: .pages  api.md  cluster-controller-architecture.md  cluster-controller-patterns.md  cluster-controller-quickstart.md  cluster-controller-reconciliation.md  cluster-controller.md  index.md  policy-controller.md  workflow.md
docs/getting-started/: index.md  installation.md
docs/how-to/: external-redis.md  index.md
docs/references/: index.md
docs/stylesheets/: extra.css
docs/swagger/: docs.go  swagger.json  swagger.yaml
docs/testing/: .pages  tests.md
docs/tests/: api.md
docs/tutorials/: index.md  rbac-basics.md
internal/api/: aggregations.go  aggregations_test.go  auth.go  auth_handler_test.go  clusters.go  clusters_handler_test.go  clusters_helpers_test.go  config.go  config_test.go  custom_types.go  custom_types_handler_test.go  custom_types_helpers_test.go  handlers.go  handlers_readyz_test.go  handlers_test.go  history.go  middleware.go  middleware_integration_test.go  middleware_resolvegroups_test.go  middleware_test.go  registries.go  registries_handler_test.go  server.go  testhelper_test.go
internal/collector/: agent.go  agent_test.go  buffer.go  buffer_test.go  config.go  config_test.go
internal/config/: config.go  config_test.go
internal/ingester/: handler.go  handler_integration_test.go  handler_test.go  server.go  server_test.go  server_tls_test.go  vmwriter.go  vmwriter_test.go
internal/rbac/: cache.go  cache_test.go  engine.go  engine_test.go  filter.go  filter_test.go  metrics.go  types.go  types_test.go
internal/store/: client.go  client_test.go  metricsource_storage.go  metricsource_storage_test.go  policy_storage.go  policy_storage_test.go  reader.go  reader_test.go  registry_storage.go  registry_storage_test.go  resource_storage.go  resource_storage_test.go  testhelper_test.go
internal/version/: version.go  version_test.go
pkg/types/: metricsource.go  policy.go  types.go
pkg/utils/: circuit_breaker.go  circuit_breaker_test.go  parser.go  parser_test.go
policy-controller/: README.md  policy_controller.py  pyproject.toml  requirements.txt  resource_access_types.py
proto/: collector.proto
proto/collectorpb/: collector.pb.go  collector_grpc.pb.go
v1.0.0/: 404.html  index.html
v1.0.0/how-to/: index.html
v1.0.1/: 404.html  index.html
v1.0.2/: .pages  404.html  crd-ref-docs.yaml  index.html  search.json  sitemap.xml
(+232 files in other folders)
