[project]
name = "policy-controller"
version = "0.2.3"
description = "ClusterPulse Policy Controller - Kubernetes operator for MonitorAccessPolicy CRDs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kopf>=1.36.1",
    "redis>=5.0.1",
    "kubernetes>=29.0.0",
    "urllib3>=2.1.0",
    "pydantic>=2.5.3",
    "prometheus-client>=0.19",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "black>=23",
    "ruff>=0.1",
    "mypy>=1.5",
    "autoflake>=2.2",
    "isort>=5.12",
]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "fakeredis>=2.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["policy_controller.py"]

[tool.uv]
dev-dependencies = [
    "black>=23",
    "ruff>=0.1",
    "mypy>=1.5",
    "autoflake>=2.2",
    "isort>=5.12",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "fakeredis>=2.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (require mocked dependencies)",
    "redis: Tests that require Redis",
]
addopts = "-v --strict-markers --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/conftest.py", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
